# backend/src/routers/dailyPuzzles.ts
@@ -1,8 +1,10 @@
 import { Router } from "express";
 import { dailyPuzzleTodayHandler } from "../controllers/dailyPuzzle/dailyPuzzleTodayHandler.js";
-import { dailyPuzzleValidateHandler } from "../controllers/dailyPuzzle/dailyPuzzleValidateHandler.js";
+import { dailyPuzzleByIdHandler } from "../controllers/dailyPuzzle/dailyPuzzleByIdHandler.js";
+import { dailyPuzzleSubmitHandler } from "../controllers/dailyPuzzle/dailyPuzzleSubmitHandler.js";
 
 export const dailyPuzzlesRouter = Router();
 
 dailyPuzzlesRouter.get("/today", dailyPuzzleTodayHandler);
-dailyPuzzlesRouter.post("/validate", dailyPuzzleValidateHandler);
+dailyPuzzlesRouter.get("/:id", dailyPuzzleByIdHandler);
+dailyPuzzlesRouter.post("/:id/submit", dailyPuzzleSubmitHandler);
